--- a/Weather-website.html
+++ b/Weather-website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Website</title>
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/Sun.png" type="image/x-icon">
 <style>
     *{
         margin: 0;
