--- a/Weather-website.html
+++ b/Weather-website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Website</title>
-<link rel="shortcut icon" href="img/Sun.png" type="image/x-icon">
+ <link rel="shortcut icon" href="img/Sun.png" type="image/x-icon"> 
 <style>
     @import url(weather.css);
 </style>
@@ -17,7 +17,9 @@
 
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Enter city name" spellcheck="false" id="search" >
-                <button id="btn-search">Search</button>
+                <button class="button">
+                    <span class="button-content">Search </span>
+                  </button>                  
             </div>
 
             <div class="weather">
